--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,19 @@
     <url>http://maven.apache.org</url>
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.31.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.22.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.testng</groupId>
@@ -24,10 +37,7 @@
             <version>4.39.0</version>
         </dependency>
 
-
         <!-- TestNG -->
-
-
 
         <dependency>
             <groupId>org.testng</groupId>
@@ -62,8 +72,6 @@
             <artifactId>poi</artifactId>
             <version>5.2.5</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
@@ -124,10 +132,5 @@
             <artifactId>guava</artifactId>
             <version>33.2.1-jre</version>
         </dependency>
-
-
-
-
     </dependencies>
-
 </project>
